--- a/src/pages/OurMission/OurMission.css
+++ b/src/pages/OurMission/OurMission.css
@@ -12,6 +12,7 @@
 }
 
 .mission-header {
+  padding: 2rem;
   text-align: center;
   margin-bottom: 2rem;
 }
