--- a/src/pages/Programs/Programs.css
+++ b/src/pages/Programs/Programs.css
@@ -12,6 +12,7 @@
 }
 
 .programs-header {
+  padding: 2rem;
   text-align: center;
   margin-bottom: 2rem;
 }
